@@ -1,20 +1,26 @@
 package ru.practicum.shareit.item.service;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import ru.practicum.shareit.booking.Booking;
+import ru.practicum.shareit.booking.BookingRepository;
+import ru.practicum.shareit.exception.BadRequestException;
 import ru.practicum.shareit.exception.ForbiddenException;
 import ru.practicum.shareit.exception.NotFoundException;
+import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemDto;
+import ru.practicum.shareit.item.mapper.CommentMapper;
 import ru.practicum.shareit.item.mapper.ItemMapper;
+import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
+import ru.practicum.shareit.item.repository.CommentRepository;
 import ru.practicum.shareit.item.storage.ItemStorage;
 import ru.practicum.shareit.user.User;
 import ru.practicum.shareit.user.UserStorage;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
+import java.time.LocalDateTime;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -23,10 +29,14 @@ public class ItemServiceImpl implements ItemService {
 
     private final ItemStorage itemStorage;
     private final UserStorage userStorage;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
 
     @Override
     public ItemDto addItem(Long userId, ItemDto dto) {
-        User owner = findUserById(userId);
+        User owner = userStorage.findUserById(userId)
+                .orElseThrow(() -> new NoSuchElementException("Пользователь с ID=" + userId + " не найден"));
+
         Item item = ItemMapper.toItem(dto);
         item.setOwner(owner);
 
@@ -34,65 +44,68 @@ public class ItemServiceImpl implements ItemService {
         return ItemMapper.toItemDto(savedItem);
     }
 
+    @Transactional
     @Override
     public ItemDto updateItem(Long userId, Long itemId, ItemDto dto) {
-        User owner = findUserById(userId);
-        Item existingItem = findItemById(itemId);
+        Item existingItem = itemStorage.findItemById(itemId)
+                .orElseThrow(() -> new NoSuchElementException("Вещь с ID=" + itemId + " не найдена"));
 
-        if (!Objects.equals(existingItem.getOwner().getUserId(), userId)) {
+        if (!existingItem.getOwner().getId().equals(userId)) {
             throw new ForbiddenException("Пользователь с ID=" + userId + " не является владельцем вещи");
         }
 
-        ItemDto existingItemDto = ItemMapper.toItemDto(existingItem);
+        if (dto.getName() != null) existingItem.setName(dto.getName());
+        if (dto.getDescription() != null) existingItem.setDescription(dto.getDescription());
+        if (dto.getAvailable() != null) existingItem.setAvailable(dto.getAvailable());
 
-        ItemDto updatedItemDto = existingItemDto.toBuilder()
-                .name(dto.getName() != null ? dto.getName() : existingItemDto.getName())
-                .description(dto.getDescription() != null ? dto.getDescription() : existingItemDto.getDescription())
-                .available(dto.getAvailable() != null ? dto.getAvailable() : existingItemDto.getAvailable())
-                .build();
-
-        Item updatedItem = ItemMapper.toItem(updatedItemDto);
-        updatedItem.setOwner(existingItem.getOwner());
-
-        Item savedItem = itemStorage.updateItem(itemId, updatedItem);
-        return ItemMapper.toItemDto(savedItem);
+        Item updatedItem = itemStorage.updateItem(itemId, existingItem);
+        return ItemMapper.toItemDto(updatedItem);
     }
 
     @Override
     public ItemDto getItemById(Long itemId) {
-        return ItemMapper.toItemDto(findItemById(itemId));
+        Item item = itemStorage.findItemById(itemId)
+                .orElseThrow(() -> new NoSuchElementException("Вещь с ID=" + itemId + " не найдена"));
+
+        List<CommentDto> comments = commentRepository.findByItemId(itemId).stream()
+                .map(CommentMapper::toCommentDto)
+                .toList();
+
+        return ItemMapper.toItemDtoWithComments(item, comments);
     }
 
     @Override
-    public Collection<ItemDto> getAllItems(Long userId, int from, int size) {
-        List<Item> allItems = itemStorage.getAllItems().stream()
+    public Collection<ItemDto> getAllItems(Long userId) {
+        Collection<Item> items = itemStorage.getItemsByOwnerId(userId);
+        return items.stream()
+                .map(this::mapItemWithBookings)
                 .collect(Collectors.toList());
-
-        int limit = 2;
-        int startIndex = 0;
-        int endIndex = Math.min(startIndex + limit, allItems.size());
-
-        return allItems.subList(startIndex, endIndex).stream()
-                .map(ItemMapper::toItemDto)
-                .toList();
     }
 
     @Override
     public Collection<ItemDto> getItemsByOwnerId(Long ownerId) {
-        return itemStorage.getItemsByOwnerId(ownerId).stream()
+        Collection<Item> items = itemStorage.getItemsByOwnerId(ownerId);
+        return items.stream()
+                .map(this::mapItemWithBookings)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public Collection<ItemDto> searchItems(String text) {
+        if (text == null || text.isBlank()) {
+            return Collections.emptyList();
+        }
+        String lowerCaseText = text.toLowerCase();
+        return itemStorage.getAllItems().stream()
+                .filter(Item::getAvailable)
+                .filter(item -> item.getName().toLowerCase().contains(lowerCaseText) ||
+                        item.getDescription().toLowerCase().contains(lowerCaseText))
                 .map(ItemMapper::toItemDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public void deleteItemById(Long itemId) {
-        Item item = findItemById(itemId);
-        User owner = findUserById(item.getOwner().getUserId());
-
-        if (!Objects.equals(owner.getUserId(), item.getOwner().getUserId())) {
-            throw new ForbiddenException("Пользователь не является владельцем вещи");
-        }
-
         itemStorage.deleteItemById(itemId);
     }
 
@@ -101,27 +114,38 @@ public class ItemServiceImpl implements ItemService {
         itemStorage.deleteAllItems();
     }
 
+    @Transactional
     @Override
-    public Collection<ItemDto> searchItems(String text) {
-        if (text == null || text.isBlank()) {
-            return Collections.emptyList();
+    public CommentDto addComment(Long userId, Long itemId, CommentDto commentDto) {
+        User user = userStorage.findUserById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с ID=" + userId + " не найден"));
+
+        Item item = itemStorage.findItemById(itemId)
+                .orElseThrow(() -> new NotFoundException("Вещь с ID=" + itemId + " не найдена"));
+
+        boolean hasBooking = bookingRepository.existsByUserAndItemAndApprovedStatus(userId, itemId);
+        if (!hasBooking) {
+            throw new BadRequestException("Пользователь с ID=" + userId + " не имеет права оставлять комментарий");
         }
 
-        String lowerCaseText = text.toLowerCase();
+        boolean isBookingCompleted = bookingRepository.existsByUserAndItemAndApprovedStatusAndEndDateBefore(
+                userId, itemId, LocalDateTime.now());
+        if (!isBookingCompleted) {
+            throw new BadRequestException("Бронирование для пользователя с ID=" + userId + " еще не завершено");
+        }
 
-        List<Item> items = itemStorage.searchItems(lowerCaseText);
-        return items.stream()
-                .map(ItemMapper::toItemDto)
-                .toList();
+        Comment comment = CommentMapper.toComment(commentDto, item, user);
+
+        Comment savedComment = commentRepository.save(comment);
+
+        return CommentMapper.toCommentDto(savedComment);
     }
 
-    private User findUserById(Long userId) {
-        return userStorage.findUserById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь с ID=" + userId + " не найден"));
+    private ItemDto mapItemWithBookings(Item item) {
+        LocalDateTime now = LocalDateTime.now();
+        Booking lastBooking = bookingRepository.findLastBooking(item.getId(), now).orElse(null);
+        Booking nextBooking = bookingRepository.findNextBooking(item.getId(), now).orElse(null);
+        return ItemMapper.toItemDtoWithBookings(item, lastBooking, nextBooking);
     }
 
-    private Item findItemById(Long itemId) {
-        return itemStorage.findItemById(itemId)
-                .orElseThrow(() -> new NotFoundException("Вещь с ID=" + itemId + " не найдена"));
-    }
 }
